<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto_profil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/profile2"
        />

    <TextView
        android:id="@+id/nama_pengguna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nama_pengguna"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foto_profil" />

    <View
        android:id="@+id/pembatas"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/nama_pengguna" />

    <!--    Nama Lengkap Pengguna -->
    <LinearLayout
        android:id="@+id/layout_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintTop_toBottomOf="@+id/pembatas">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_person"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_lengkap"
                    android:layout_marginStart="50dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_nama"/>


    <!--    Email Pengguna -->
    <LinearLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_nama">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_email"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:text="@string/nama_email"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_email"/>

    <!--    Alamat Pengguna -->
    <LinearLayout
        android:id="@+id/layout_alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_email">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_adress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_alamat"
            android:layout_marginStart="39dp"
            android:textSize="18sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_alamat"/>

</androidx.constraintlayout.widget.ConstraintLayout>